@@ -1,5 +1,6 @@
 Changes for 1.0alpha7:
 
+ - added file frontends/php/graphs.html
  - added file frontends/php/images/sysmaps/host.png
  - added file frontends/php/map.html
  - added file frontends/php/maps.html
